# wp1.7-scheduler-tests

./: .gitignore  CMakeLists.txt  NOTES.md  run-scan.py
components/: CMakeLists.txt
components/simple/: FirstAlgorithm.cpp  FirstAlgorithm.hpp  SecondAlgorithm.cpp  SecondAlgorithm.hpp  ThirdAlgorithm.cpp  ThirdAlgorithm.hpp
components/traccc/: TracccAlgorithm.cpp  TracccAlgorithm.hpp  TracccAlgs.cpp  TracccAlgs.hpp  TracccCudaAlgorithm.cpp  TracccCudaAlgorithm.hpp
src/: AlgExecState.hpp  AlgorithmBase.cpp  AlgorithmBase.hpp  AlgorithmContext.cpp  AlgorithmContext.hpp  AlgorithmDependencyMap.cpp  AlgorithmDependencyMap.hpp  Coroutines.hpp  EventContentManager.cpp  EventContentManager.hpp  EventStore.hpp  NewAlgoContext.cpp  NewAlgoContext.hpp  NewAlgoDependencyMap.cpp  NewAlgoDependencyMap.hpp  NewAlgorithmBase.cpp  NewAlgorithmBase.hpp  NewEventContentManager.cpp  NewEventContentManager.hpp  NewScheduler.cpp  NewScheduler.hpp  Scheduler.cpp  Scheduler.hpp  StatusCode.hpp
tests/: CMakeLists.txt  MockAlgorithm.hpp  Performance.ipynb  TestEventContentManager.cpp  TestEventSlot.cpp  TestEventStore.cpp  TestNewEventContentManager.cpp  TestNewEventSlot.cpp  TestNewScheduler.cpp  TestScheduler.cpp  helgrind.suppr  valgrind.suppr
tests/.ipynb_checkpoints/: Performance-checkpoint.ipynb
